fixing bugs to available tiles and bubble z-index

--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ td > div {
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  transform: skew(45deg, -45deg) scaleX(2);
 }
 
 td:has(.player) {
@@ -129,9 +128,9 @@ td:has(.place) {
 }
 
 .flat .bubble {
-  bottom: 60%;
-  right: -90px;
-  transform: rotate(45deg) scale(3) translateX(50%);
+  bottom: 100%;
+  right: -30%;
+  transform: rotate(0) scale(2) translate(50%, -50%);
 }
 
 @keyframes hide-and-show {
@@ -183,7 +182,7 @@ td:has(.place) {
   box-shadow: 0 0 0 8px yellow, -6px 0px 20px 16px gold;
   transform: skew(45deg, -45deg) scale(.4) translateX(150%);
   animation-name: place-idle;
-  animation-duration: 4s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
 }
 
@@ -199,6 +198,28 @@ td:has(.place) {
   100% {transform: skew(45deg, -45deg) scale(.2);}
 }
 
+@keyframes show {
+  0% {opacity: 0; transform: translateY(-10%)}
+  20% {opacity: 0.2;}
+  40% {opacity: 0.4;}
+  60% {opacity: 0.6;}
+  80% {opacity: 0.8;}
+  100% {opacity: 1; transform: translateY(0)}
+}
+
+@keyframes bubble-idle {
+  0% {transform: skew(45deg, -45deg) rotate(90deg) scale(1, 2) translate(50%, -50%);}
+  50% {transform: skew(45deg, -45deg) rotate(90deg) scale(1, 2) translate(50%, -50%) translateY(5%);}
+  100% {transform: skew(45deg, -45deg) rotate(90deg) scale(1, 2) translate(50%, -50%);}
+}
+
+@keyframes flat-bubble-idle {
+  0% {transform: skew(0) rotate(0) scale(2) translate(50%, -50%);}
+  50% {transform: skew(0) rotate(0) scale(2) translate(50%, -50%) translateY(5%);}
+  100% {transform: skew(0) rotate(0) scale(2) translate(50%, -50%);}
+}
+
+
 .place.player {
   box-shadow: 0 0 4vw 1vw greenyellow;
   mix-blend-mode: normal;
@@ -211,25 +232,32 @@ td:has(.place) {
 
 td:has(.place.player) {
   outline: solid 0 transparent;
-  transition: .3s;
 }
-
-.flat td:has(.place.player) { z-index: 1; }
 
 .bubble {
   position: absolute;
   display: none;
-  bottom: 25%;
-  right: -135px;
-  transform: rotate(90deg) scale(3) translateX(50%);
+  min-width: min-content;
+  opacity: 0;
+  bottom: 175%;
+  right: -150%;
+  transform: skew(45deg, -45deg) rotate(90deg) scale(1, 2) translate(50%, -50%);
   background: white;
   box-shadow: -6px 6px 0px -1px rgba(0,0,0,0.3);
   border-radius: 12px 12px 12px 0px;
   padding: 8px 16px;
 }
 
-.place.player .bubble {
+td:has(.place.player) .bubble {
+  z-index: 1;
+  position: relative;
   display: block;
+  opacity: 1;
+  animation: show .3s, bubble-idle 3s infinite
+}
+
+.flat td:has(.place.player) .bubble {
+  animation: flat-bubble-idle 3s infinite !important;
 }
 
 .blocked {
@@ -256,6 +284,7 @@ td:has(.blocked) {
   flex-direction: column;
   height: 100%;
   width: 100%;
+  transform: skew(45deg, -45deg) scaleX(2);
   transition: 3s;
 }
 
@@ -323,9 +352,9 @@ td:has(.carpet) {
   font-family: inherit;
   color: white;
   font-weight: 900;
-  font-size: 2vw;
-  width: 8vw;
-  height: 8vw;
+  /* font-size: 32px; */
+  width: 50px;
+  height: 50px;
   transition: transform 3s;
 }
 
@@ -338,14 +367,14 @@ td:has(.carpet) {
 
 .box-left-btn, .box-right-btn {
   flex-grow: 1;
-  width: 4vw;
-  height: 4vw;
+  width: 25px;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
-  outline: solid 0.4vw lightblue;
-  outline-offset: -.2vw;
-  border-radius: 1vw;
+  outline: solid 4px lightblue;
+  outline-offset: -2px;
+  border-radius: 4px;
 }
 
 .box-left-btn {
@@ -366,17 +395,17 @@ td:has(.carpet) {
 }
 
 .box-top-btn {
-  width: 4.5vw;
-  height: 4.5vw;
+  width: 30px;
+  height: 30px;
   position: relative;
   margin: 0 auto;
-  top: 1vw;
+  top: 9px;
   transform: rotate(-45deg) skew(15deg, 15deg);
   background: white;
   cursor: pointer !important;
-  outline: solid 0.4vw lightblue;
-  outline-offset: -.2vw;
-  border-radius: 1vw;
+  outline: solid 6px lightblue;
+  outline-offset: -3px;
+  border-radius: 4px;
   transition: 3s;
 }
 
@@ -389,13 +418,13 @@ td:has(.carpet) {
 .flat .box-right-btn {
   transform: none;
   transition: 3s;
-  width: 8vw;
-  height: 8vw;
+  width: 50px;
+  height: 50px;
 }
 
 .flat .box-top-btn {
   transform: skewX(45deg) scaleY(0.001);
-  width: 8vw;
+  width: 50px;
   transition: 3s;
   margin: 0 auto;
   top: 2.3vw;
@@ -404,7 +433,7 @@ td:has(.carpet) {
 
 .flat.mode {
   transform: scale(.7);
-  font-size: 5vw;
+  font-size: 24px;
   transition: transform 3s;
 }
 
@@ -417,5 +446,5 @@ td:has(.carpet) {
 }
 
 .input-container input {
-  width: 5vw;
+  width: 30%;
 }
